services/slides/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slides
  namespace: slides
spec:
  clusterIP: 10.43.194.251
  clusterIPs:
  - 10.43.194.251
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: slides
  sessionAffinity: None
  type: ClusterIP
