services/slides/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  generation: 1
  name: slides
  namespace: slides
spec:
  ingressClassName: traefik
  rules:
  - host: slides.homelab.local
    http:
      paths:
      - backend:
          service:
            name: slides
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: slides.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: slides
            port:
              number: 80
        path: /
        pathType: Prefix
